--- a/port/code/code_node.html
+++ b/port/code/code_node.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="ItsOkayItsOfficial">
-  <link rel="shortcut icon" href="assets/img/logo.png">
+  <link rel="shortcut icon" href="../../assets/img/logo.png">
 
   <title>ItsOkayItsOfficial</title>
 
@@ -18,29 +18,34 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/hover.css" rel="stylesheet">
+  <link href="../../assets/css/style.css" rel="stylesheet">
+  <link href="../../assets/css/port.css" rel="stylesheet">
+  <link href="../../assets/css/hover.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll">
 
   <!-- Sitnav -->
   <nav class="site-nav transition">
-    <a class="nav-link smoothScroll" href="#about">About</a>
-    <a class="nav-link smoothScroll" href="#services">Services</a>
-    <a class="smoothScroll" href="#home"><img src="assets/img/logo.png" class="logo"></a>
-    <a class="nav-link smoothScroll" href="#projects">Projects</a>
-    <a class="nav-link smoothScroll" href="#contact">Contact</a>
+    <a class="nav-link smoothScroll" style="margin-right:100px" href="../../index.html">Home</a>
+    <a class="smoothScroll" href="#top"><img src="../../assets/img/logo.png" class="nav-logo"></a>
+    <a class="nav-link smoothScroll" style="margin-left:100px" href="#contact">Contact</a>
   </nav>
   <!--/sitnav -->
 
 
   <!-- Home Section-->
-  <section id="home" name="home"></section>
-  <div id="headerwrap">
+  <section id="top"></section>
+  <div id="headerwrap_node">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
+          <a><h1>Hal Bot</h1></a>
+          <a>
+            <div class="hal">
+              <h3>Hal:</h3><p class="hal-type"></p>
+          </div>
+          </a>
         </div>
       </div>
       <!--/row -->
@@ -56,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 name">
-          <img class="img-circle img-responsive" src="assets/img/ajp2.jpg">
+          <img class="img-circle img-responsive" src="../../assets/img/ajp2.jpg">
         </div>
         <!--/col-md-4-->
 
@@ -90,117 +95,6 @@
   <div class="about center-block" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
   </div>
-
-
-  <!-- Services Section -->
-  <section id="services" name="services"></section>
-  <div id="servicewrap">
-    <div class="container">
-
-      <div class="row">
-        <div class="col-md-8-offset-2 centered">
-          <h1>AN OVERVIEW OF MY SERVICES</h1>
-          <h3>I'll do all the work for you</h3>
-        </div>
-        <!-- /col-md-8 -->
-      </div>
-      <!--/row -->
-
-      <div class="row mt">
-
-        <div class="col-md-3 service">
-          <i class="fa fa-tag"></i>
-          <p>SOCIAL, CRM, & CMS<br/><small></small></p>
-          <p class="text">LinkedIn, Facebook, Twitter, The Google Apps. NationBuilder, WordPress, Drupel </p>
-        </div>
-        <div class="col-md-3 service">
-          <i class="fa fa-cloud"></i>
-          <p>TOOLS & TRICKS<br/><small></small></p>
-          <p class="text">Git (Hub, BitBucket, Bash, & Kracken), Stackoverflow, Atlassian suite and Axosoft. Adobe CC, The Google Apps, Microsoft Office suite</p>
-        </div>
-        <div class="col-md-3 service">
-          <i class="fa fa-code"></i>
-          <p>FRONT-END DEV<br/><small></small></p>
-          <p class="text">HTML5, CSS3, SASS, LESS, Foundation and Bootstrap. JavaScript, jQuery, JSON, XML, Angular.js, React.js, PHP
-          </p>
-        </div>
-        <div class="col-md-3 service">
-          <i class="fa fa-code"></i>
-          <p>BACK-END DEV<br/><small></small></p>
-          <p class="text">Java, C#, Rust, .NET, Node.js, Rails, Apache projects, Python, bash and shell, R, MySQL, REST, AWS Cloud, SharePoint</p>
-        </div>
-
-      </div>
-      <!--/row -->
-
-    </div>
-    <!--/container -->
-  </div>
-  <!--/servicewrap -->
-
-  <!-- Seperator 2 -->
-  <div class="portfolio center-block" data-stellar-background-ratio="0.5">
-    <div class="overlay"></div>
-  </div>
-
-
-  <!-- Projects Section -->
-  <section id="projects" name="projects"></section>
-  <div id="portfoliowrap">
-    <div class="container">
-
-      <div class="row">
-        <div class="col-md-8-offset-2 centered">
-          <h2>SOME PROJECTS</h2>
-        </div>
-        <!-- /col-md-8 -->
-      </div>
-      <!-- /row -->
-
-      <div class="row">
-        <!-- Kansas Society -->
-        <div class="col-md-4">
-          <div class="effect-julia">
-            <a href="port/kss/index.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/ks2.svg" alt=""></a>
-            <figcaption>
-              <div>
-                <p>The Kansas Society</p>
-              </div>
-            </figcaption>
-          </div>
-        </div>
-
-        <!-- K2 Group -->
-        <div class="col-md-4">
-          <div class="effect-julia">
-            <a href="port/k2/k2.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/k2.svg" alt=""></a>
-            <figcaption>
-              <div>
-                <p>K2 Leadership Group</p>
-              </div>
-            </figcaption>
-          </div>
-        </div>
-
-        <!-- Franklin Partnership -->
-        <div class="col-md-4">
-          <div class="effect-julia">
-              <a href="port/fp/index_fp.html" target="_blank"><img class="img-responsive" src="assets/img/orgs/fp.png" alt=""></a>
-              <figcaption>
-                <div>
-                  <p>The Franklin Partnership</p>
-                </div>
-              </figcaption>
-          </div>
-        </div>
-      </div>
-
-      <!-- /row -->
-
-    </div>
-    <!--/container -->
-  </div>
-  <!--/portfoliowrap -->
 
   <!-- Seperator 3 -->
   <div class="contact center-block" data-stellar-background-ratio="0.5">
@@ -255,9 +149,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar.js/0.6.2/jquery.stellar.min.js"></script>
 
   <!-- Custom Js -->
-  <script src="assets/js/custom.js"></script>
-  <script src="assets/js/classie.js"></script>
-  <script src="assets/js/smoothscroll.js"></script>
+  <script src="../../assets/js/custom.js"></script>
+  <script src="../../assets/js/classie.js"></script>
+  <script src="../../assets/js/smoothscroll.js"></script>
 
   <!--  Onbaord Scripts -->
   <script type="text/javascript">
