--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- Home Section-->
   <section id="home" name="home"></section>
-  <div id="headerwrap">
+  <div id="headerwrap" class="wrap">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
@@ -52,7 +52,7 @@
 
   <!-- About Section-->
   <section id="about" name="about"></section>
-  <div id="aboutwrap">
+  <div id="aboutwrap" class="wrap">
     <div class="container">
       <div class="row">
         <div class="col-md-4 name">
@@ -87,14 +87,14 @@
   <!-- /aboutwrap -->
 
   <!-- Seperator 1 -->
-  <div class="about center-block" data-stellar-background-ratio="0.5">
+  <div class="about center-block">
     <div class="overlay"></div>
   </div>
 
 
   <!-- Services Section -->
   <section id="services" name="services"></section>
-  <div id="servicewrap">
+  <div id="servicewrap" class="wrap">
     <div class="container">
 
       <div class="row">
@@ -145,7 +145,7 @@
 
   <!-- Projects Section -->
   <section id="projects" name="projects"></section>
-  <div id="portfoliowrap">
+  <div id="portfoliowrap" class="wrap">
     <div class="container">
 
       <div class="row">
