--- a/port/code/code_node.html
+++ b/port/code/code_node.html
@@ -31,9 +31,9 @@
 
   <!-- Sitnav -->
   <nav id="site-nav" class="site-nav transition">
-    <a class="nav-link scroll" href="../../index.html">Home</a>
+    <a class="nav-link scroll" href="#top">Top</a>
     <a class="nav-link scroll" href="#overview">Overview</a>
-    <a class="scroll" href="#top"><img src="../../assets/img/logo.png" class="nav-logo"></a>
+    <a class="scroll" href="../../index.html"><img src="../../assets/img/logo.png" class="nav-logo"></a>
     <a class="nav-link scroll" href="#build">Build</a>
     <a class="nav-link scroll" href="#contact">Contact</a>
   </nav>
@@ -62,7 +62,7 @@
   <!--/headerwrap -->
 
 
-  <!-- About Section-->
+  <!-- Overview Section-->
   <section id="overview"></section>
   <div id="aboutwrap">
     <div class="container">
@@ -336,39 +336,34 @@
   </div>
   <!-- /#aboutwrap -->
 
+  <section id="build"></section>
+  <div id="servicewrap" class="wrap">
+    <div id='productCarousel' class='carousel slide'>
+      <div class='carousel-inner'>
 
-  <div id='productCarousel' class='carousel slide' data-ride='carousel'>
-    <ol class='carousel-indicators'>
-      <li data-target='#productCarousel' data-slide-to='0' class='active'></li>
-      <li data-target='#productCarousel' data-slide-to='1'></li>
-      <li data-target='#productCarousel' data-slide-to='2'></li>
-      <li data-target='#productCarousel' data-slide-to='3'></li>
-    </ol>
+        <!-- Initialize Section -->
+        <div class='item active'>
+          <hr>
+          <a>
+            <h1>Initialize</h1>
+          </a>
+          <hr>
+          <div class="col-md-2">
+            <h3>Using Require</h3>
+            <p>We have to use Node.js's <samp>require()</samp> method to call from <samp><img src="../../assets/img/icons/node1.svg">node_modules</samp>              the dependencies we need for Hal to work.</p>
+            <p>We're also using <samp>require()</samp> to import information from our <samp><img src="../../assets/img/icons/js1.svg">keys.js</samp>              </p>
+          </div>
 
-    <div class='carousel-inner'>
-      <!-- Initialize Section -->
-      <div class='item active'>
-        <hr>
-        <a>
-          <h1>Initialize</h1>
-        </a>
-        <hr>
-        <div class="col-md-2">
-          <h3>Using Require</h3>
-          <p>We have to use Node.js's <samp>require()</samp> method to call from <samp><img src="../../assets/img/icons/node1.svg">node_modules</samp>            the dependencies we need for Hal to work.</p>
-          <p>We're also using <samp>require()</samp> to import information from our <samp><img src="../../assets/img/icons/js1.svg">keys.js</samp>            </p>
-        </div>
+          <div class="col-md-4 coder">
+            <ul class="tabs nav">
+              <li class="active"><a href="#hal_init" data-toggle="tab"><img src="../../assets/img/icons/js1.svg"> hal.js<button type="button" class="close">×</button></a></li>
+              <li><a href="#keys_init" data-toggle="tab"><img src="../../assets/img/icons/js1.svg"> keys.js<button type="button" class="close">×</button></a></li>
+            </ul>
 
-        <div class="col-md-4 coder">
-          <ul class="tabs nav">
-            <li class="active"><a href="#hal_init" data-toggle="tab"><img src="../../assets/img/icons/js1.svg"> hal.js<button type="button" class="close">×</button></a></li>
-            <li><a href="#keys_init" data-toggle="tab"><img src="../../assets/img/icons/js1.svg"> keys.js<button type="button" class="close">×</button></a></li>
-          </ul>
-
-          <div class="tab-content">
-            <!-- hal.js -->
-            <div id="hal_init" class="tab-pane active">
-              <pre class="prettyprint lang-javascript">
+            <div class="tab-content">
+              <!-- hal.js -->
+              <div id="hal_init" class="tab-pane active">
+                <pre class="prettyprint lang-javascript">
   <code>
   // Variables - require
   var keys = require("./keys.js");
@@ -379,10 +374,10 @@
   var chalk = require("chalk");
   </code>
               </pre>
-            </div>
+              </div>
 
-            <div id="keys_init" class="tab-pane">
-              <pre class="prettyprint lang-javascript">
+              <div id="keys_init" class="tab-pane">
+                <pre class="prettyprint lang-javascript">
     <code>
   // Twitter API keys
   var twitterKeys = {
@@ -405,117 +400,103 @@
   };
     </code>
                 </pre>
+              </div>
             </div>
           </div>
+
+          <div class="col-md-6">
+          </div>
         </div>
+        <!-- /initialize -->
 
-        <div class="col-md-6">
+        <!-- Hal Section-->
+        <div class='item'>
+          <section id="hal"></section>
+          <div class="center-block">
+            <hr>
+            <a>
+              <h1>Hal</h1>
+            </a>
+          </div>
+          <div class="container">
+
+          </div>
         </div>
-      </div>
-      <!-- /initialize -->
+        <!--/hal -->
 
-      <div class='item'>
-        <img src='http://placehold.it/800x400'>
-      </div>
-      <div class='item'>
-        <img src='http://placehold.it/800x400'>
-      </div>
-      <div class='item'>
-        <img src='http://placehold.it/800x400'>
-      </div>
-    </div>
+        <!-- Twitter Section-->
+        <div class='item'>
+          <section id="twitter"></section>
+          <div class="center-block">
+            <hr>
+            <a>
+              <h1>Twitter</h1>
+            </a>
+          </div>
+          <div class="container">
 
-    <a class='left carousel-control' href='#productCarousel' role='button' data-slide='prev'>
+          </div>
+        </div>
+        <!-- /twitter -->
+
+        <!-- Spotfiy Section-->
+        <div class='item'>
+          <section id="spotify"></section>
+          <div class="center-block">
+            <hr>
+            <a>
+              <h1>Spotify</h1>
+            </a>
+          </div>
+          <div class="container">
+
+          </div>
+        </div>
+        <!-- /spotfiy -->
+
+        <!-- OMDb Section-->
+        <div class='item'>
+          <section id="omdb"></section>
+          <div class="center-block">
+            <hr>
+            <a>
+              <h1>OMDb</h1>
+            </a>
+          </div>
+          <div class="container">
+
+          </div>
+        </div>
+        <!-- /omdb -->
+
+        <!-- Build Section-->
+        <div class='item'>
+          <section id="build"></section>
+          <div class="center-block">
+            <hr>
+            <a>
+              <h1>Build</h1>
+            </a>
+          </div>
+          <div class="container">
+
+          </div>
+        </div>
+        <!-- /build -->
+
+      </div>
+
+      <a class="carousel-control l" href='#productCarousel' role='button' data-slide='prev'>
 <span class='glyphicon glyphicon-chevron-left' aria-hidden='true'></span>
-<span class='sr-only'>Previous</span>
 </a>
-    <a class='right carousel-control' href='#productCarousel' role='button' data-slide='next'>
+      <a class="carousel-control r" href='#productCarousel' role='button' data-slide='next'>
 <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span>
-<span class='sr-only'>Next</span>
 </a>
 
+    </div>
+    <!-- /carousel -->
   </div>
-  <!-- /carousel -->
-
-  <br>
-
-  <!-- Hal Section-->
-  <section id="hal"></section>
-  <div class="center-block">
-    <hr>
-    <a>
-      <h1>Hal</h1>
-    </a>
-  </div>
-  </div>
-  <div class="container">
-
-  </div>
-  <!--/hal -->
-
-  <br>
-
-  <!-- Twitter Section-->
-  <section id="twitter"></section>
-  <div class="center-block">
-    <hr>
-    <a>
-      <h1>Twitter</h1>
-    </a>
-  </div>
-  </div>
-  <div class="container">
-
-  </div>
-  <!-- /twitter -->
-
-  <br>
-
-  <!-- Spotfiy Section-->
-  <section id="spotify"></section>
-  <div class="center-block">
-    <hr>
-    <a>
-      <h1>Spotify</h1>
-    </a>
-  </div>
-  </div>
-  <div class="container">
-
-  </div>
-  <!-- /spotfiy -->
-
-  <br>
-
-  <!-- OMDb Section-->
-  <section id="omdb"></section>
-  <div class="center-block">
-    <hr>
-    <a>
-      <h1>OMDb</h1>
-    </a>
-  </div>
-  </div>
-  <div class="container">
-
-  </div>
-  <!-- /omdb -->
-
-  <br>
-
-  <!-- Build Section-->
-  <section id="build"></section>
-  <div class="center-block">
-    <hr>
-    <a>
-      <h1>Build</h1>
-    </a>
-  </div>
-  </div>
-  <div class="container">
-
-  </div>
-  <!-- /build -->
+  <!-- /Service Wrap -->
 
   <br>
 
